--- a/src/html/nerfing.html
+++ b/src/html/nerfing.html
@@ -1,6 +1,9 @@
 @@include("./common/head.html", {
-	"title": "TITLE"
+	"title": "Школьный турнир NERF 2016",
+	"mod": ""
 })
+
+			@@include("./common/header.html", {})
 
 			@@include("./pages/home.html", {})
 
