--- a/src/html/common/foot.html
+++ b/src/html/common/foot.html
@@ -4,7 +4,8 @@
 	@@include("../common/modals.html", {})
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js"></script>
+	
 	<!-- main script -->
 	@@if (server === "dnevnik"){
 	<script src="assets/js/dnevnik.min.js"></script>
