--- a/src/html/common/head.html
+++ b/src/html/common/head.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html class="html">
+<html class="html @@mod">
 <head>
 	<meta charset="utf-8">
 	<title>@@title</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	<meta name="viewport" content="width=1020">
+	<meta name="viewport" content="width=1200">
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
