link and mail added

--- a/src/html/pages/form.html
+++ b/src/html/pages/form.html
@@ -13,7 +13,7 @@
 			</p>
 		</div><!-- /.section__text text registration__text -->
 
-		<form action="https://formspree.io/bazhenov87@yandex.ru" class="registration__form form" method="post">
+		<form action="https://formspree.io/nerfing@company.dnevnik.ru" class="registration__form form" method="post">
 		
 			<div class="form__input-placeholder">
 
