--- a/src/html/pages/home.html
+++ b/src/html/pages/home.html
@@ -36,7 +36,7 @@
 			
 			<div class="about__button-placeholder">
 				
-				<a href="#" class="button button--2">
+				<a href="https://wiki.dnevnik.ru/view.aspx?event=142544&pageTitle=%D0%9F%D1%80%D0%BE%D0%B2%D0%B5%D0%B4%D1%91%D0%BD%D0%BD%D1%8B%D0%B5%20%D1%83%D1%80%D0%BE%D0%BA%D0%B8" class="button button--2" target="_blank">
 					Фото с уроков
 				</a>
 
@@ -104,7 +104,7 @@
 
 		<div class="video__frame-placeholder">
 			
-			<iframe class="video__frame" width="440" height="248" src="https://www.youtube.com/embed/XQu8TTBmGhA?rel=0" frameborder="0" allowfullscreen></iframe>
+			<iframe class="video__frame" width="440" height="248" src="https://www.youtube.com/embed/eX2uZMC2mPk?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		</div><!-- /.video__video-placeholder -->
 	
